--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://localhost:27017/spkf-db
+MONGO_URL=mongodb+srv://dbUserAdmin:dbPassword@clusternam-e3fz5.mongodb.net/spkt-db
 PORT=3000
