feat: media module

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "postinstall": "tsc --sourceMap false",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "dev":"nest start",
-    "start": "node dist/main.js",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main.js",
